--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <a id="Top"></a>
 
-    <iframe src="media.html#first"></iframe>
+    <iframe src="media.html#first" width="300" height="300"></iframe>
 
     
     <div>
