--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     
-    <h1>About Me</h1>
-
     <a id="Top"></a>
+    <h1>About Me</h1>
 
     <iframe src="media.html#first" width="300" height="300"></iframe>
 
@@ -69,7 +68,12 @@
     <h3>
         <a href="./form.html" id="Sign Up"> Want to become an AltSchooler? Sign Up</a> 
     </h3>
-    
+
+    <div>
+        <p>
+           <a href="./table.html" id="table">Here is the list of courses at ALTschool</a> 
+        </p>
+    </div>
 
     <nav>
         <a href="#Top" class="visually-hidden">Skip to Top</a>
